# librarian

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: download.rs  lib.rs  tgz.rs  web.rs  zip.rs
test_input/: file.tgz
